# experimental

./: .gitignore
chalibrate/: README.md  chalibrate.py  deep_diagnose.py  generate_board.py  pyproject.toml  test_gui_calibration.sh
chalibrate/src/chalibrate/: __init__.py  main.py
chalibrate/src/chalibrate/cli/: __init__.py  formatter.py
chalibrate/src/chalibrate/core/: __init__.py  board_config.py  board_detector.py  calibration_options.py  calibrator.py  coverage_analyzer.py  image_quality.py  metrics.py
chalibrate/src/chalibrate/gui/: advanced_options_dialog.py  calibration_panel.py  config_dialog.py  coverage_heatmap_dialog.py  image_grid.py  image_viewer.py  main_window.py  undistortion_dialog.py  workers.py
chalibrate/src/chalibrate/utils/: __init__.py  image_loader.py
color_transition/: color_flow.py  color_transition_app.py  pyproject.toml
freqscan/: README.md  audio_frequency_analyzer.py  pyproject.toml
quicklaunch/: .gitignore  App.xaml  App.xaml.cs  AppEntry.cs  ConfigLoader.cs  MainWindow.xaml  MainWindow.xaml.cs  QuickLaunch.csproj  README.md  apps.yaml  quicklaunch.sln
